# sample-efficiency-evaluation

./: Makefile  README.md  cool_demo.ipynb  cool_demo.py  example_run.sh  pyproject.toml  run_dataset_processing.sh  run_workflow_locally.sh  slice_processor.py
.github/workflows/: test.yml
fact_matching_results/BEAR-small/PatrickHaller_pile-100M-words/: relation_occurrence_info.json
fact_matching_results/BEAR-small/PatrickHaller_pile-10M-words/: relation_occurrence_info.json
fact_matching_results/BEAR-small/wikimedia_wikipedia_20231101_en/: relation_info.json  relation_occurrence_info.json
info_gathering/: __init__.py  alias_importance_measure.py  cdf_log_likelihood_optimization.py  docs.md  eval_accuracy_on_slices.py  eval_model_checkpoint_accuracy_on_slices.py  eval_model_checkpoint_cdf_log_likelihood_optimization.py  eval_model_checkpoint_cdf_log_likelihood_optimization2.py  eval_model_checkpoint_prediction_log_likelihood_optimization.py  eval_model_checkpoint_psf_log_likelihood_optimization.py  eval_probability_functions_nll.py  get_checkpoint_data.py  get_longest_question_string.py  get_model_checkpoint_answer_for_occurrences_in_slices_data.py  slice_irt_score.py
info_gathering/correct_answer_probability_analysis/: eval_model_checkpoint_cdf_log_likelihood_optimization.py  eval_model_checkpoint_psf_log_likelihood_optimization.py  eval_probability_functions_nll.py
info_gathering/correct_answer_probability_analysis/probability_function_optimization/: eval_model_checkpoint_cdf_log_likelihood_optimization.py  eval_model_checkpoint_psf_ext2_log_likelihood_optimization.py  eval_model_checkpoint_psf_ext_log_likelihood_optimization.py  eval_model_checkpoint_psf_log_likelihood_optimization.py  util.py
info_gathering/data_analysis/: alias_importance_measure.py  get_longest_question_string.py
info_gathering/model_performance_analysis/: eval_model_checkpoint_accuracy_on_slices.py  eval_model_checkpoint_occurrence_bucket_accuracy_on_slices.py  eval_model_checkpoint_weighted_accuracy_on_slices.py  get_model_checkpoint_answer_for_occurrences_in_slices_data.py  util.py
model_training_setups/GPT2/: train.py
probing_results/: Experiments.md
src/: __init__.py  fact_matcher.py
src/experiments/: docs.md  paths.py
src/info_gathering/: docs.md  paths.py
src/sample_efficiency_evaluation/: __init__.py  dataset_processor.py  fact_matcher.py  fact_matcher_index.py  knowledge_prober.py
src/tests/: test_fact_matcher.py
src/utility/: __init__.py  utility.py
tests/: test_fact_matcher.py  test_fact_matcher_entity_linker.py  test_fact_matcher_hybrid.py  test_fact_matcher_index_hybrid.py  test_fact_matcher_index_simple.py  test_fact_matcher_simple.py  test_fact_matcher_simple_heuristic.py  test_knowledge_prober.py  test_utility.py
tests/test_resources/: aliases_extension_test.json  all_entities.json  relation_info_obj_aliases.json
training_scripts/: mamba2.py  xlstm.py
utility_scripts/: alias_importance_measure.py  eval_accuracy_on_slices.py  get_checkpoint_data.py  get_longest_question_string.py  run_dataset_processing.sh  slice_elo_scoring.py  slice_processor.py
(+138 files in other folders)
