[project]
name = "sample_efficiency_evaluation"
description = ""
authors = [
  { name="Daniel Christoph", email="christod@hu-berlin.de" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "datasets",
    "transformers>=4.38",
    "tqdm",
    "datasets",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
    "black"
]

[tool.pylint]
disable = [
    "C0103",  # Disable snake_case naming convention check
    "C0114",  # Missing module docstring
    "R0903",  # Too few public methods
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "C0301",  # Line too long
    "E0401",  # Unable to import
]

[tool.black]
line-length = 120