[project]
name = "sample_efficiency_evaluation"
description = ""
authors = [
  { name="Daniel Christoph", email="christod@hu-berlin.de" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "setuptools",
    "wheel",
    "datasets",
    "transformers",
    "tqdm",
    "datasets",
    "spacy[cuda12x]",
    "spacy-entity-linker",
    "numpy",
    "more-itertools",
    "matplotlib",
    "tensorboard"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
    "black"
]

[tool.pylint]
disable = [
    "C0103",  # Disable snake_case naming convention check
    "C0114",  # Missing module docstring
    "R0903",  # Too few public methods
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "C0301",  # Line too long
    "E0401",  # Unable to import
    "R0913",  # Too many arguments
    "R0917",  # Too many positional arguments
    "R0902",  # Too many instance attributes
    "R0914",  # Too many local variables
    "R0801",  # Similar lines in 2 files
    "C0209",  # consider-using-f-string
]

[tool.black]
line-length = 120